# BounceBall

./: .gitignore  BounceBall.pro  BounceBall.rc  CMakeLists.txt  README.md  bounceball.cpp  bounceball.h  config.h  main.cpp
Sources/: ball.cpp  ball.h  block.cpp  block.h  bounceball.cpp  bounceball.h  main.cpp  plank.cpp  plank.h  resource.h  resource.rc
forms/: mainwindow.ui
forms/widgets/: failurewidget.ui  preparewidget.ui  scenewidget.ui  successwidget.ui
headers/cores/: block.h  framework.h  hoodle.h  plank.h  points.h
headers/utils/: constants.h  resources.h
headers/views/: mainwindow.h
headers/views/widgets/: failurewidget.h  preparewidget.h  scenewidget.h  successwidget.h
resources/: resources.qrc
sources/: main.cpp
sources/cores/: block.cpp  framework.cpp  hoodle.cpp  plank.cpp
sources/utils/: resources.cpp
sources/views/: mainwindow.cpp
sources/views/widgets/: failurewidget.cpp  preparewidget.cpp  scenewidget.cpp  successwidget.cpp
